added some components, i18n

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,9 +7,16 @@
 .app {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: var(--main-bg-color);
+  justify-content: flex-start;
+  background: linear-gradient(to bottom, var(--main-gradDark), var(--main-gradLight));;
   color: var(--main-text-color);
   height: 100vh;
+}
+.page-wrapper {
+  display: flex;
+  width: 100%;
+}
+.content-wrap {
+  flex-grow: 1;
+  padding: 12px;
 }
