--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,7 +1,24 @@
 .app.dark {
   --main-bg-color: #000000;
+  --main-gradDark: hsl(198, 44%, 11%);
+  --main-gradLight: hsl(198, 39%, 29%);
   --secondary-bg-color: #3e3e3e;
 
   --main-text-color: #f5f5f5;
   --secondary-text-color: #e0e0e0;
+
+  --navbar-bg-color: #14393d;
+  --applink-text-color: #ededed;
+  --applink-text-color-hover: #dedede;
+  --applink-text-color-active: #ffffff;
+
+  --switch-theme-bg-color: rgb(6, 31, 2);
+  --switch-theme-bg-color-hover: rgb(4, 36, 14);
+  --switch-theme-text-color: #e0e0e0;
+  --switch-theme-text-active: #7489ff;
+
+  --button-primary-bg-color: #7831f3;
+  --button-primary-bg-color-hover: #5e24d9;
+  --button-primary-bg-color-active: #470fc0;
+  --button-primary-text-color: #ffffff;
 }
