--- a/src/shared/ui/Button.module.scss
+++ b/src/shared/ui/Button.module.scss
@@ -2,7 +2,12 @@
   display: inline-flex;
   padding: 4px 8px;
 }
+
 .primary {
   background-color: var(--button-primary-bg-color);
   color: var(--button-primary-text-color);
+}
+
+.circle {
+  border-radius: 50%;
 }
